[package]
name = "dusk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fern = "0.6.2"
humantime = "2.1.0"
log = { version = "0.4.21", features = ["kv", "kv_serde"] }
tokio = { version = "1.36.0", features = ["full"] }
